# CLAT

./: .gitignore  README.md  callbacks.py  data.py  environment.yaml  main.py  pyproject.toml  requirements.txt  utils.py
configs/: default.yaml
configs/data/: DDR.yaml  FGADDR.yaml  FGADR.yaml  RAO.yaml
data/: FLAIR_DR_with_EK.pt  FLAIR_DR_without_EK.pt  FLAIR_RAO_with_EK.pt  FLAIR_RAO_without_EK.pt  annotation_DDR_disease.csv  annotation_DDR_lesion.csv  annotation_FGADR_disease.csv  annotation_FGADR_lesion.csv
models/: __init__.py  abstracts.py  clat.py
models/encoder/: __init__.py  cait.py  mil_vt.py  utils.py  vit.py
src/: main.py
src/clat/: __init__.py  callbacks.py  data.py  model.py  utils.py
src/clat/encoder/: __init__.py  cait.py  mil_vt.py  vit.py
src/preprocess/: img_crop.py
